# codegenerator-package

./: main.py
code_generator/: codegen.py  f3.txt  pyproject.toml
