[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "generator"
version = "0.0.1"
authors = [
  { name="Kyle Pannan", email="kylepannan@gmail.com" },
]
description = "A small package used for generating all possible permutations of a set length of a set of strings"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"